istio-delegate-sidecar-authorizationpolicy/productpage/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage
  namespace: products
spec:
  selector:
    app: productpage
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
