istio-delegate-sidecar-authorizationpolicy/productpage/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
  namespace: products
spec:
  http:
  - match:
     - uri:
        prefix: "/productpage/v1/"
    route:
    - destination:
        host: productpage-v1.products.svc.cluster.local
  - route:
    - destination:
        host: productpage.products.svc.cluster.local
